<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02B3EA"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="118dp"
        android:text="@string/weight_lifting"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/setList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <ImageView
        android:id="@+id/exerciseImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle"
        app:srcCompat="@drawable/weight" />

    <LinearLayout
        android:id="@+id/setList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#0284B4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/mark_it_complete"
            android:textColor="#fff"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#fff"
            android:paddingLeft="100dp"
            android:text="@string/complete_type_1_set"
            android:textColor="#fff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#fff"
            android:paddingLeft="100dp"
            android:text="Complete type 2 set"
            android:textColor="#fff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#fff"
            android:paddingLeft="100dp"
            android:text="Complete type 3 set"
            android:textColor="#fff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#fff"
            android:paddingLeft="100dp"
            android:text="Complete type 4 set"
            android:textColor="#fff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:buttonTint="#fff"
            android:paddingLeft="100dp"
            android:text="Complete type 5 set"
            android:textColor="#fff"
            android:textSize="15sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>